--- a/push2github.ipynb
+++ b/push2github.ipynb
@@ -32,7 +32,6 @@
       "creating coze-0.0.1/coze\n",
       "creating coze-0.0.1/coze.egg-info\n",
       "copying files to coze-0.0.1...\n",
-      "copying README.md -> coze-0.0.1\n",
       "copying setup.py -> coze-0.0.1\n",
       "copying coze/__init__.py -> coze-0.0.1/coze\n",
       "copying coze/coze.py -> coze-0.0.1/coze\n",
@@ -186,29 +185,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main (root-commit) b56d990] init\n",
-      " 33 files changed, 3370 insertions(+)\n",
-      " create mode 100644 .DS_Store\n",
-      " create mode 100644 .ipynb_checkpoints/README-checkpoint.md\n",
-      " create mode 100644 .ipynb_checkpoints/coze_tutorial-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/push2github-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/readme-checkpoint.ipynb\n",
-      " create mode 100644 .ipynb_checkpoints/setup-checkpoint.py\n",
-      " create mode 100644 README.md\n",
-      " create mode 100644 build/lib/coze/__init__.py\n",
-      " create mode 100644 build/lib/coze/coze.py\n",
-      " create mode 100644 coze.egg-info/PKG-INFO\n",
-      " create mode 100644 coze.egg-info/SOURCES.txt\n",
-      " create mode 100644 coze.egg-info/dependency_links.txt\n",
-      " create mode 100644 coze.egg-info/top_level.txt\n",
-      " create mode 100644 coze/.ipynb_checkpoints/__init__-checkpoint.py\n",
-      " create mode 100644 coze/.ipynb_checkpoints/coze-checkpoint.py\n",
+      "[main (root-commit) 5a4b60b] init\n",
+      " 17 files changed, 1413 insertions(+)\n",
+      " create mode 100644 .gitignore\n",
       " create mode 100644 coze/__init__.py\n",
-      " create mode 100644 coze/__pycache__/__init__.cpython-310.pyc\n",
-      " create mode 100644 coze/__pycache__/coze.cpython-310.pyc\n",
       " create mode 100644 coze/coze.py\n",
       " create mode 100644 coze_tutorial.ipynb\n",
       " create mode 100644 data/bot_id.png\n",
+      " create mode 100644 data/coze_jupyter.png\n",
       " create mode 100644 \"data/\\345\\274\\200\\345\\234\\272\\347\\231\\275.png\"\n",
       " create mode 100644 \"data/\\346\\211\\243\\345\\255\\220\\347\\225\\214\\351\\235\\242.png\"\n",
       " create mode 100644 \"data/\\346\\216\\210\\346\\235\\203\\351\\241\\265\\351\\235\\242.png\"\n",
@@ -216,16 +200,15 @@
       " create mode 100644 \"data/\\350\\201\\212\\345\\244\\251\\346\\210\\252\\345\\233\\276.jpg\"\n",
       " create mode 100644 \"data/\\350\\216\\267\\345\\217\\226APPID.png\"\n",
       " create mode 100644 \"data/\\350\\260\\203\\350\\257\\225\\345\\222\\214\\345\\217\\221\\345\\270\\203.png\"\n",
-      " create mode 100644 dist/coze-0.0.1-py3-none-any.whl\n",
-      " create mode 100644 dist/coze-0.0.1.tar.gz\n",
       " create mode 100644 push2github.ipynb\n",
       " create mode 100644 readme.ipynb\n",
+      " create mode 100644 readme.md\n",
       " create mode 100644 setup.py\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m\"init \"\n"
+    "!git commit -m \"init \"\n"
    ]
   },
   {
@@ -260,22 +243,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f5d0f1de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!git remote add origin git@github.com:lyhue1991/torchkeras.git"
+    "!git remote add origin git@github.com:lyhue1991/coze.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "12e49933",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 21, done.\n",
+      "Counting objects: 100% (21/21), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (20/20), done.\n",
+      "Writing objects: 100% (21/21), 2.41 MiB | 676.00 KiB/s, done.\n",
+      "Total 21 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
+      "To github.com:lyhue1991/coze.git\n",
+      " * [new branch]      main -> main\n"
+     ]
+    }
+   ],
    "source": [
-    "!git push  origin master "
+    "!git push  origin main"
    ]
   },
   {
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "644f0c51",
    "metadata": {},
    "outputs": [
